--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,13 @@
 .content {
   margin-left: 2%;
 }
+
+.terms {
+  text-align: justify;
+  margin-right: 2%;
+}
+
+.privacy {
+  text-align: justify;
+  margin-right: 2%;
+}
