--- a/frontend/src/Components/Login.css
+++ b/frontend/src/Components/Login.css
@@ -9,6 +9,7 @@ form {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    border-radius: 20px;
   }
   
   button {
