Add basic Submit form code
Also makes minor changes to the schemas

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,3 +11,9 @@
   text-align: justify;
   margin-right: 2%;
 }
+
+.evidenceType {
+  background-color: lightgray;
+  border-color: ivory;
+  color: black;
+}
